; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnv50.c_nv50_graph_construct_gene_clipid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnv50.c_nv50_graph_construct_gene_clipid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_grctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_grctx*)* @nv50_graph_construct_gene_clipid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv50_graph_construct_gene_clipid(%struct.nouveau_grctx* %0) #0 {
  %2 = alloca %struct.nouveau_grctx*, align 8
  store %struct.nouveau_grctx* %0, %struct.nouveau_grctx** %2, align 8
  %3 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %4 = call i32 @xf_emit(%struct.nouveau_grctx* %3, i32 1, i32 0)
  %5 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %6 = call i32 @xf_emit(%struct.nouveau_grctx* %5, i32 4, i32 0)
  %7 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %8 = call i32 @xf_emit(%struct.nouveau_grctx* %7, i32 4, i32 0)
  %9 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %10 = call i32 @xf_emit(%struct.nouveau_grctx* %9, i32 2, i32 0)
  %11 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %12 = call i32 @xf_emit(%struct.nouveau_grctx* %11, i32 2, i32 67108864)
  %13 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %14 = call i32 @xf_emit(%struct.nouveau_grctx* %13, i32 1, i32 0)
  %15 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %16 = call i32 @xf_emit(%struct.nouveau_grctx* %15, i32 1, i32 128)
  %17 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %18 = call i32 @xf_emit(%struct.nouveau_grctx* %17, i32 1, i32 0)
  %19 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %20 = call i32 @xf_emit(%struct.nouveau_grctx* %19, i32 1, i32 0)
  %21 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %22 = call i32 @xf_emit(%struct.nouveau_grctx* %21, i32 1, i32 0)
  %23 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %24 = call i32 @xf_emit(%struct.nouveau_grctx* %23, i32 1, i32 128)
  %25 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %26 = call i32 @xf_emit(%struct.nouveau_grctx* %25, i32 1, i32 0)
  ret void
}

declare dso_local i32 @xf_emit(%struct.nouveau_grctx*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
